<resources>
    <string name="app_name">HABITMEISTER</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="init_val_percent">0.0 %</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Elements:</string>
    <string name="mellow_concentration">Mellow/Concentration:</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_calibration">Calibration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragonetitle">CONNECT TO MUSE HEADBAND</string>
    <string name="fragtwotitle">REALTIME EEG AND ARTIFACTS</string>
    <string name="title_activity_drive_connect">DriveConnectActivity</string>
    <string name="switch_yes"></string>
    <string name="switch_no"></string>
    <string name="calib_q">How does this picture make you feel?</string>


</resources>
