<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/teal"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fragonetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragonetitle"
            android:textSize="20sp"
            android:layout_gravity="fill_horizontal"
            android:typeface="monospace"/>

        <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <Button
                android:id="@+id/refresh"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/refresh"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/connect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/connect"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/disconnect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/disconnect"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/con_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/undefined"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src ="@drawable/connectionmuse"
            android:background="@null"/>
    </LinearLayout>
</RelativeLayout>
